     - Add routing option to buildconf/uwsgi-core.ini.
  * New binary package uwsgi-plugin-router-basicauth.
  * New binary package uwsgi-plugin-router-cache.
  * New binary package uwsgi-plugin-router-http.
  * New binary package uwsgi-plugin-router-redirect.
  * New binary package uwsgi-plugin-router-rewrite.
  * New binary package uwsgi-plugin-router-uwsgi.

 -- Janos Guljas <janos@debian.org>  Wed, 06 Feb 2013 20:10:31 +0100

uwsgi (1.4.4+dfsg-1) experimental; urgency=low

  * New upstream release. (Closes: #698691)
  * Remove upstream applied patches:
    - fixed-a-leak-in-uwsgi.workers.patch
    - fixed-magic_table-usage-in-http-and-fastrouter-plugins.patch
    - security-check-in-the-http-router.patch
    - threading-issue-with-uwsgi-send.patch
    - fixed-ruby-rvm-support.patch
    - fixed-spooler-with-chdir.patch
    - fixed-async+threading.patch
    - skip-headers-sending-when-no-headers-are-defined.patch
    - fixed-logfile-inheritance.patch
    - fixed-waitpid-usage-in-cheap-cheaper-lazy-modes.patch
    - fixed-casting-in-wsgi-input.patch
    - fixed-casting-in-wsgi-input-web3-pump-part.patch
    - fixed-env-clear-in-plain-async-mode.patch
    - allows-ugreen-with-threads.patch
    - fix-mod_uwsgi-authenticated-but-authentication-typeless-requests.patch
    - fixed-fastcgi-support-for-response-bigger-than-64k.patch
    - disable-SIGSTOP-SIGTSTP-in-gateways.patch
    - fixed-idle-mode.patch
  * Update patches:
    - fix-reload-process-name.patch
  * debian/rules:
    - Update path for example configuration files.
    - Remove uwsgibuild.* files on clean.
  * Update my email address.
  * Update debian/copyright.
  * debian/control:
    - Remove DM-Upload-Allowed field.
    - Raise standards version to 3.9.4.
    - Update VCS fields to contain canonical URL forms.

 -- Janos Guljas <janos@debian.org>  Sun, 27 Jan 2013 02:46:36 +0100

uwsgi (1.2.3+dfsg-5) unstable; urgency=low

  * debian/patches/remove-pg_config_cflags-in-probepg.patch