@@ -115,6 +115,31 @@ Description: fast, self-healing application container server (core)
    * uWSGI usage examples
    * uWSGI test suite
 
+Package: uwsgi-emperor
+Architecture: any
+Priority: optional
+Depends: ${shlibs:Depends}, ${misc:Depends}, uwsgi-core (= ${binary:Version}),
+ lsb-base, initscripts (>= 2.88dsf-13.3)
+Description: fast, self-healing application container server (emperor scripts)
+ uWSGI presents a complete stack for networked/clustered web applications,
+ implementing message/object passing, caching, RPC and process management.
+ It uses the uwsgi protocol for all the networking/interprocess communications.
+ .
+ uWSGI can be run in preforking, threaded, asynchronous/evented modes and
+ supports various forms of green threads/coroutines (such as uGreen, Greenlet,
+ Fiber). uWSGI provides several methods of configuration: via command line,
+ via environment variables, via XML, INI, YAML configuration files, via LDAP
+ and more.
+ .
+ On top of all this, it is designed to be fully modular. This means that
+ different plugins can be used in order to add compatibility with tons of
+ different technology on top of the same core.
+ .
+ This package depends on uWSGI core binary and installs:
+   * init.d script for running uWSGI Emperor daemon with options defined in
+     custom user-created configuration files
+   * basic configuration for running uWSGI Emperor daemon
+
 Package: uwsgi-plugins-all
 Architecture: any
 Depends: ${misc:Depends},
