@@ -1,0 +1,2 @@
+Files found in this directory are processed by uWSGI Emperor init.d script
+as uWSGI vassals configuration files.
