@@ -1,0 +1,26 @@
+[uwsgi]
+
+# try to autoload appropriate plugin if "unknown" option has been specified
+autoload = true
+
+# enable master process manager
+master = true
+
+# spawn 2 uWSGI emperor worker processes
+workers = 2
+
+# automatically kill workers on master's death
+no-orphans = true
+
+# place timestamps into log
+log-date = true
+
+# user identifier of uWSGI processes
+uid = www-data
+
+# group identifier of uWSGI processes
+gid = www-data
+
+# vassals directory
+emperor = /etc/uwsgi-emperor/vassals
+
