@@ -1,0 +1,9 @@
+"/var/log/uwsgi/emperor.log" {
+  copytruncate
+  daily
+  rotate 5
+  compress
+  delaycompress
+  missingok
+  notifempty
+}
