@@ -47,6 +47,7 @@ uwsgi (1.4.5+dfsg-1) UNRELEASED; urgency=low
   * New binary package uwsgi-plugin-router-redirect.
   * New binary package uwsgi-plugin-router-rewrite.
   * New binary package uwsgi-plugin-router-uwsgi.
+  * New binary package uwsgi-emperor. (Closes: #660212)
 
  -- Janos Guljas <janos@debian.org>  Wed, 06 Feb 2013 20:10:31 +0100
 
